Grace/tests/gibbs/errors/t077.grace
// ERROR = P1004
if((6 * 9) == 42) {
    print "So long and thanks for all the fish"
}
